<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />
    <item
        android:id="@+id/findDateFragment"
        android:icon="@drawable/search_icon"
        android:title="@string/explore_date" />
    <item
        android:id="@+id/myDatesFragment"
        android:icon="@drawable/calender_icon"
        android:title="@string/my_date" />
    <item
        android:id="@+id/datesInterestFragment"
        android:icon="@drawable/interests"
        android:tooltipText="@string/date_interests"
        android:title="@string/date_interests" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile" />

</menu>